--- a/index.html
+++ b/index.html
@@ -176,8 +176,9 @@
                 <h1 id="title-blue">WE</h1>
                 <h1 id="title-white">DO</h1>
             </div>
-            <span>
-					An AI operating system to bridge offline to online.  <br>	Power any surface or screen. <br> Turn monologues into dialogues.
+            <span>    
+                  An engagement monetization platform to bridge offline to online
+                    <br> Turn monologues into dialogues.
 				</span>
         </div>
 
