--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
     -->
         <div id="logo" class="step" data-x="-2000" data-y="-2000" data-z="0" data-scale="1">
             <img src="assets/logo-white.png">
-            <p>The store of the future is social, <br>data-driven, interactive, self optimizing.
-            </p>
+            <p>
+                An engagement monetization platform to bridge offline to online </p>
         </div>
 
         <!--
@@ -177,8 +177,7 @@
                 <h1 id="title-white">DO</h1>
             </div>
             <span>    
-                  An engagement monetization platform to bridge offline to online
-                    <br> Turn monologues into dialogues.
+                  The store of the future is social, data-driven, interactive, self optimizing.
 				</span>
         </div>
 
@@ -254,39 +253,36 @@
         </div>
 
         <div id="caseOne-16" class="step" data-x="6100" data-y="4300" data-z="00" data-rotate-x="0" data-rotate-y="0" data-scale="2" data-rotate="0">
-            Moet Hennessy
+            case study - <strong> Moet Hennessy</strong>
             <video src="/assets/XP-MH.mp4" autoplay loop></video>
         </div>
 
         <div id="caseOne-17" class="step" data-x="3600" data-y="4300" data-z="700" data-rotate-x="0" data-rotate-y="30" data-scale="2" data-rotate="0">
-            Kiehl's
+            case study - <strong>  Kiehl's</strong>
             <video src="/assets/XP-kie.mp4" autoplay loop></video>
         </div>
 
         <div id="caseOne-18" class="step" data-x="1750" data-y="4300" data-z="2500" data-rotate-x="0" data-rotate-y="60" data-scale="2" data-rotate="0">
-            Cushman & Wakefield
+            case study - <strong> Cushman & Wakefield </strong>
             <video src="/assets/XP-3rd.mp4" autoplay loop></video>
         </div>
 
 
         <div id="demo-19" class="step" data-x="3000" data-y="1000" data-z="6000" data-scale="6">
             <div class="slide">
-                ~ demos go here ~ <br> <br> If possible add a trigger for <strong>3 smiles</strong> <br> show one ":)" per smile
-                <br><br><br><br><br>
-                <h1>:) :) :)</h1>
+                <br> <br>to be able to show you the demos, <br> we need <strong>3 smiles</strong>
+                <br><br>
+                <img class="active" src="/assets/smile.svg" alt="">
+                <img class="notActive" src="/assets/smile.svg" alt="">
+                <img class="notActive" src="/assets/smile.svg" alt="">
             </div>
         </div>
 
         <div id="demo-20" class="step" data-x="3000" data-y="6000" data-z="6500" data-scale="6">
             <div class="slide">
-                demo 2 here
-            </div>
-        </div>
 
+                the app here is <strong>app-demo-triggers</strong>
 
-        <div id="demo-21" class="step" data-x="3000" data-y="11000" data-z="7000" data-scale="6">
-            <div class="slide">
-                demo here
             </div>
         </div>
 
